Starting packaging kaldi.

--- a/src/tfrnnlm/CMakeLists.txt
+++ b/src/tfrnnlm/CMakeLists.txt
@@ -40,10 +40,17 @@ target_link_libraries(kaldi-tfrnnlm PUBLIC
 
 install(TARGETS kaldi-tfrnnlm
     EXPORT kaldi-targets
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
+    COMPONENT tfrnnlm
 )
 
-install(FILES ${PUBLIC_HEADERS} DESTINATION include/kaldi/tfrnnlm)
+install(FILES ${PUBLIC_HEADERS} DESTINATION include/kaldi/tfrnnlm COMPONENT tfrnnlm_dev)
 
+set(CPACK_DEBIAN_TFRNNLM_PACKAGE_NAME "libkaldi-tfrnnlm" PARENT_SCOPE)
+set(CPACK_DEBIAN_TFRNNLM_PACKAGE_DEPENDS "libkaldi" PARENT_SCOPE)
+
+set(CPACK_DEBIAN_TFRNNLM_DEV_PACKAGE_NAME "${CPACK_DEBIAN_TFRNNLM_PACKAGE_NAME}-dev" PARENT_SCOPE)
+set(CPACK_DEBIAN_TFRNNLM_DEV_PACKAGE_DEPENDS "${CPACK_DEBIAN_TFRNNLM_PACKAGE_NAME}" PARENT_SCOPE)
+pass_through_cpack_vars()
